# DUI_VIO

./: README.md
camera_models_in/: CMakeLists.txt  package.xml
config/: rviz_config_init.rviz  struct_core_v2.yaml
dui_vio/: CMakeLists.txt  package.xml
dui_vio/feature_tracking/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp
dui_vio/initialization/: gmm_model.cpp  gmm_model.h  initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h  solve_opt.cpp  solve_opt.h  translate_factor.cpp  translate_factor.h
dui_vio/state_estimation/: depth_factor.cpp  depth_factor.h  depth_handler.cpp  depth_handler.h  depth_handler_node.cpp  depth_handler_node_pc.cpp  dui_vio.cpp  dui_vio.h  dui_vio_init.cpp  dui_vio_seq_node.cpp  dui_vio_syn_node.cpp  dvio_node.cpp  feature_manager.cpp  feature_manager.h  imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  parameters.cpp  parameters.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_quat.cpp  projection_quat.h  sampson_factor.cpp  sampson_factor.h  sampson_jacobian.cpp
dui_vio/utility/: utility.h  visualization.cpp  visualization.h
launch/: dui_vio_sc_run.launch  feature_tracker.launch
